Closed Bug 708569 Opened 12 years ago Closed 12 years ago

IonMonkey: fix clang warnings

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

      No description provided.
Attached patch PatchSplinter Review
Fixes all warnings with Clang 3.0 in js/src/ion on x86 and x64. It looks like the type of some variables was changed from int32 to uint32 at some point. This also fixes some cases where we used %d instead of %u in IonSpew although Clang did not complain about it.
Attachment #579997 - Flags: review?(nicolas.b.pierron)
Comment on attachment 579997 [details] [diff] [review]
Patch

Review of attachment 579997 [details] [diff] [review]:
-----------------------------------------------------------------

Good.
Attachment #579997 - Flags: review?(nicolas.b.pierron) → review+
Pushed:

http://hg.mozilla.org/projects/ionmonkey/rev/c110288b93ec
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.