Fix Clang warnings (bug 708569, r=pierron)