js/src/ion/Snapshots.cpp
@@ -506,7 +506,7 @@ SnapshotWriter::writeSlotHeader(JSValueType type, uint32 regCode)
 void
 SnapshotWriter::addSlot(const FloatRegister &reg)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: double (reg %s)", slotsWritten_, reg.name());
+    IonSpew(IonSpew_Snapshots, "    slot %u: double (reg %s)", slotsWritten_, reg.name());
 
     writeSlotHeader(JSVAL_TYPE_DOUBLE, reg.code());
 }
@@ -534,7 +534,7 @@ ValTypeToString(JSValueType type)
 void
 SnapshotWriter::addSlot(JSValueType type, const Register &reg)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: %s (%s)",
+    IonSpew(IonSpew_Snapshots, "    slot %u: %s (%s)",
             slotsWritten_, ValTypeToString(type), reg.name());
 
     JS_ASSERT(type != JSVAL_TYPE_DOUBLE);
@@ -544,7 +544,7 @@ SnapshotWriter::addSlot(JSValueType type, const Register &reg)
 void
 SnapshotWriter::addSlot(JSValueType type, int32 stackOffset)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: %s (stack %d)",
+    IonSpew(IonSpew_Snapshots, "    slot %u: %s (stack %d)",
             slotsWritten_, ValTypeToString(type), stackOffset);
 
     if (type == JSVAL_TYPE_DOUBLE)
@@ -558,7 +558,7 @@ SnapshotWriter::addSlot(JSValueType type, int32 stackOffset)
 void
 SnapshotWriter::addSlot(const Register &type, const Register &payload)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: value (t=%s, d=%s)",
+    IonSpew(IonSpew_Snapshots, "    slot %u: value (t=%s, d=%s)",
             slotsWritten_, type.name(), payload.name());
 
     writeSlotHeader(JSVAL_TYPE_MAGIC, NUNBOX32_REG_REG);
@@ -569,7 +569,7 @@ SnapshotWriter::addSlot(const Register &type, const Register &payload)
 void
 SnapshotWriter::addSlot(const Register &type, int32 payloadStackOffset)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: value (t=%s, d=%d)",
+    IonSpew(IonSpew_Snapshots, "    slot %u: value (t=%s, d=%d)",
             slotsWritten_, type.name(), payloadStackOffset);
 
     writeSlotHeader(JSVAL_TYPE_MAGIC, NUNBOX32_REG_STACK);
@@ -580,7 +580,7 @@ SnapshotWriter::addSlot(const Register &type, int32 payloadStackOffset)
 void
 SnapshotWriter::addSlot(int32 typeStackOffset, const Register &payload)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: value (t=%d, d=%s)",
+    IonSpew(IonSpew_Snapshots, "    slot %u: value (t=%d, d=%s)",
             slotsWritten_, typeStackOffset, payload.name());
 
     writeSlotHeader(JSVAL_TYPE_MAGIC, NUNBOX32_STACK_REG);
@@ -591,7 +591,7 @@ SnapshotWriter::addSlot(int32 typeStackOffset, const Register &payload)
 void
 SnapshotWriter::addSlot(int32 typeStackOffset, int32 payloadStackOffset)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: value (t=%d, d=%d)",
+    IonSpew(IonSpew_Snapshots, "    slot %u: value (t=%d, d=%d)",
             slotsWritten_, typeStackOffset, payloadStackOffset);
 
     writeSlotHeader(JSVAL_TYPE_MAGIC, NUNBOX32_STACK_STACK);
@@ -603,7 +603,7 @@ SnapshotWriter::addSlot(int32 typeStackOffset, int32 payloadStackOffset)
 void
 SnapshotWriter::addSlot(const Register &value)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: value (reg %s)", slotsWritten_, value.name());
+    IonSpew(IonSpew_Snapshots, "    slot %u: value (reg %s)", slotsWritten_, value.name());
 
     writeSlotHeader(JSVAL_TYPE_MAGIC, value.code());
 }
@@ -611,7 +611,7 @@ SnapshotWriter::addSlot(const Register &value)
 void
 SnapshotWriter::addSlot(int32 valueStackSlot)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: value (stack %d)", slotsWritten_, valueStackSlot);
+    IonSpew(IonSpew_Snapshots, "    slot %u: value (stack %d)", slotsWritten_, valueStackSlot);
 
     writeSlotHeader(JSVAL_TYPE_MAGIC, Registers::Invalid);
     writer_.writeSigned(valueStackSlot);
@@ -621,7 +621,7 @@ SnapshotWriter::addSlot(int32 valueStackSlot)
 void
 SnapshotWriter::addUndefinedSlot()
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: undefined", slotsWritten_);
+    IonSpew(IonSpew_Snapshots, "    slot %u: undefined", slotsWritten_);
 
     writeSlotHeader(JSVAL_TYPE_UNDEFINED, SINGLETON_VALUE);
 }
@@ -629,7 +629,7 @@ SnapshotWriter::addUndefinedSlot()
 void
 SnapshotWriter::addNullSlot()
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: null", slotsWritten_);
+    IonSpew(IonSpew_Snapshots, "    slot %u: null", slotsWritten_);
 
     writeSlotHeader(JSVAL_TYPE_NULL, SINGLETON_VALUE);
 }
@@ -644,14 +644,14 @@ SnapshotWriter::endSnapshot()
     writer_.writeSigned(-1);
 #endif
     
-    IonSpew(IonSpew_Snapshots, "ending snapshot total size: %d bytes (start %d)",
+    IonSpew(IonSpew_Snapshots, "ending snapshot total size: %u bytes (start %u)",
             uint32(writer_.length() - lastStart_), lastStart_);
 }
 
 void
 SnapshotWriter::addInt32Slot(int32 value)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: int32 %d", slotsWritten_, value);
+    IonSpew(IonSpew_Snapshots, "    slot %u: int32 %d", slotsWritten_, value);
 
     if (value >= 0 && uint32(value) < SINGLETON_VALUE) {
         writeSlotHeader(JSVAL_TYPE_NULL, value);
@@ -664,9 +664,9 @@ SnapshotWriter::addInt32Slot(int32 value)
 void
 SnapshotWriter::addConstantPoolSlot(uint32 index)
 {
-    IonSpew(IonSpew_Snapshots, "    slot %d: constant pool index %d", slotsWritten_, index);
+    IonSpew(IonSpew_Snapshots, "    slot %u: constant pool index %u", slotsWritten_, index);
 
-    if (index >= 0 && uint32(index) < SINGLETON_VALUE) {
+    if (index < SINGLETON_VALUE) {
         writeSlotHeader(JSVAL_TYPE_UNDEFINED, index);
     } else {
         writeSlotHeader(JSVAL_TYPE_UNDEFINED, MAX_REG_FIELD_VALUE);
